--- a/templates/domains.html
+++ b/templates/domains.html
@@ -174,7 +174,7 @@
         
         messageContainer.append(message);
         setTimeout(function() {
-            message.alert('close');
+            message.remove();
         }, 5000);
     }
 </script>
