--- a/templates/debug.html
+++ b/templates/debug.html
@@ -15,6 +15,7 @@
             <select class="form-control" id="action" name="action" required>
                 <option value="nginx">Configurer Nginx</option>
                 <option value="ssl">Configurer SSL</option>
+                <option value="deploy">Déployer</option>
             </select>
         </div>
         <button type="submit" class="btn btn-primary">Exécuter</button>
