--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -27,7 +27,7 @@
             </tbody>
         </table>
     </div>
-    <div id="messages"></div> <!-- Container for messages -->
+    <div id="socket-messages"></div> <!-- Container for messages -->
 </div>
 {% endblock %}
 
@@ -49,7 +49,7 @@
         // Handle job run button click
         $('.run-job').on('click', function() {
             const jobName = $(this).data('job-name');
-            $('#messages').empty(); // Clear existing messages
+            $('#socket-messages').empty(); // Clear existing messages
             addMessage(`Le travail "${jobName}" a été lancé. Veuillez patienter...`, 'info');
             $.post(`{{ url_for('site_management.run_job', job_name='') }}${jobName}`, function(data) {
                 addMessage(data.message, data.status);
@@ -62,7 +62,7 @@
             var messageDiv = document.createElement('div');
             messageDiv.className = `alert alert-${type} mt-4`;
             messageDiv.innerText = message;
-            $('#messages').prepend(messageDiv);
+            $('#socket-messages').prepend(messageDiv);
         }
     });
 </script>
