update debug.py and debug.html

--- a/templates/debug.html
+++ b/templates/debug.html
@@ -13,6 +13,7 @@
         <div class="form-group">
             <label for="action">Action</label>
             <select class="form-control" id="action" name="action" required>
+                <option value="dns">Configurer DNS</option>
                 <option value="nginx">Configurer Nginx</option>
                 <option value="ssl">Configurer SSL</option>
                 <option value="deploy">Déployer</option>
