update deployment.py and deployments.html

--- a/templates/deployments.html
+++ b/templates/deployments.html
@@ -12,6 +12,7 @@
                     <th>Domaine</th>
                     <th>Succès</th>
                     <th>Date</th>
+                    <th>Date (timestamp)</th>
                     <th>Durée (secondes)</th>
                 </tr>
             </thead>
@@ -21,7 +22,8 @@
                     <td>{{ deployment.domain }}</td>
                     <td>{{ 'Oui' if deployment.success else 'Non' }}</td>
                     <td>{{ deployment.time }}</td>
-                    <td>{{ deployment.duration }}</td>
+                    <td>{{ deployment.time.strftime('%d/%m/%Y - %Hh%M') }}</td>
+                    <td>{{ deployment.duration | round(2) }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -39,7 +41,7 @@
 <script>
     $(document).ready(function() {
         $('#deploymentsTable').DataTable({
-            "order": [[2, "asc"]],
+            "order": [[2, "desc"]],
             "language": {
                 url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/fr-FR.json',
             }
