update deployment.py and deployments.html

--- a/templates/deployments.html
+++ b/templates/deployments.html
@@ -22,8 +22,8 @@
                     <td>{{ deployment.domain }}</td>
                     <td>{{ 'Oui' if deployment.success else 'Non' }}</td>
                     <td>{{ deployment.time }}</td>
-                    <td>{{ deployment.time }}</td>
-                    <td>{{ deployment.duration }}</td>
+                    <td>{{ deployment.time.strftime('%d/%m/%Y - %Hh%M') }}</td>
+                    <td>{{ '{:.2f}'.format(deployment.duration) }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
