--- a/templates/domains.html
+++ b/templates/domains.html
@@ -95,7 +95,7 @@
         var statusCell = $('<td colspan="3">').addClass('font-weight-bold');
         
         if (status === 'Configuré') {
-            statusCell.html('<a href="#" class="toggle-configured" data-toggle="collapse" data-target=".configured-domains">' +
+            statusCell.html('<a href="#" class="toggle-configured">' +
                             status + ' <span class="badge badge-pill badge-info">' + domains.length + '</span>' +
                             '<i class="fas fa-chevron-down ml-2"></i></a>');
         } else {
@@ -105,16 +105,16 @@
         statusRow.append(statusCell);
         $('#domainList').append(statusRow);
         
+        var domainsContainer = $('<tbody>').addClass('configured-domains').hide();
+        $('#domainList').append(domainsContainer);
+        
         domains.forEach(function(domain) {
-            addDomainToList(domain, status === 'Configuré');
+            addDomainToList(domain, status === 'Configuré', domainsContainer);
         });
     }
 
-    function addDomainToList(domain, isConfigured) {
+    function addDomainToList(domain, isConfigured, container) {
         var row = $('<tr>');
-        if (isConfigured) {
-            row.addClass('configured-domains collapse');
-        }
         row.append($('<td>').text(domain.name));
         row.append($('<td>').text(domain.status));
         var actionsCell = $('<td>');
@@ -134,7 +134,12 @@
         }));
         
         row.append(actionsCell);
-        $('#domainList').append(row);
+        
+        if (isConfigured) {
+            container.append(row);
+        } else {
+            $('#domainList').append(row);
+        }
     }
 
     function configureDomain(domain) {
@@ -175,8 +180,14 @@
 
     $(document).on('click', '.toggle-configured', function(e) {
         e.preventDefault();
-        $('.configured-domains').collapse('toggle');
-        $(this).find('i').toggleClass('fa-chevron-down fa-chevron-up');
+        var $icon = $(this).find('i');
+        var $configuredDomains = $('.configured-domains');
+        
+        var bsCollapse = new bootstrap.Collapse($configuredDomains[0], {
+            toggle: true
+        });
+        
+        $icon.toggleClass('fa-chevron-down fa-chevron-up');
     });
 </script>
 {% endblock %}
