--- a/templates/domains.html
+++ b/templates/domains.html
@@ -95,7 +95,7 @@
         var statusCell = $('<td colspan="3">').addClass('font-weight-bold');
         
         if (status === 'Configuré') {
-            statusCell.html('<a href="#" class="toggle-configured">' +
+            statusCell.html('<a href="#" class="toggle-configured" data-toggle="collapse" data-target=".configured-domains">' +
                             status + ' <span class="badge badge-pill badge-info">' + domains.length + '</span>' +
                             '<i class="fas fa-chevron-down ml-2"></i></a>');
         } else {
@@ -105,16 +105,16 @@
         statusRow.append(statusCell);
         $('#domainList').append(statusRow);
         
-        var domainsContainer = $('<tbody>').addClass('configured-domains').hide();
-        $('#domainList').append(domainsContainer);
-        
         domains.forEach(function(domain) {
-            addDomainToList(domain, status === 'Configuré', domainsContainer);
+            addDomainToList(domain, status === 'Configuré');
         });
     }
 
-    function addDomainToList(domain, isConfigured, container) {
+    function addDomainToList(domain, isConfigured) {
         var row = $('<tr>');
+        if (isConfigured) {
+            row.addClass('configured-domains collapse');
+        }
         row.append($('<td>').text(domain.name));
         row.append($('<td>').text(domain.status));
         var actionsCell = $('<td>');
@@ -134,12 +134,7 @@
         }));
         
         row.append(actionsCell);
-        
-        if (isConfigured) {
-            container.append(row);
-        } else {
-            $('#domainList').append(row);
-        }
+        $('#domainList').append(row);
     }
 
     function configureDomain(domain) {
@@ -180,14 +175,8 @@
 
     $(document).on('click', '.toggle-configured', function(e) {
         e.preventDefault();
-        var $icon = $(this).find('i');
-        var $configuredDomains = $('.configured-domains');
-        
-        var bsCollapse = new bootstrap.Collapse($configuredDomains[0], {
-            toggle: true
-        });
-        
-        $icon.toggleClass('fa-chevron-down fa-chevron-up');
+        $('.configured-domains').collapse('toggle');
+        $(this).find('i').toggleClass('fa-chevron-down fa-chevron-up');
     });
 </script>
 {% endblock %}
