--- a/templates/domains.html
+++ b/templates/domains.html
@@ -95,7 +95,7 @@
         var statusCell = $('<td colspan="3">').addClass('font-weight-bold');
         
         if (status === 'Configuré') {
-            statusCell.html('<a href="#" class="toggle-configured">' +
+            statusCell.html('<a href="#" class="toggle-configured" data-toggle="collapse" data-target=".configured-domains">' +
                             status + ' <span class="badge badge-pill badge-info">' + domains.length + '</span>' +
                             '<i class="fas fa-chevron-down ml-2"></i></a>');
         } else {
@@ -121,9 +121,10 @@
         
         if (domain.status === 'En attente de vérification') {
             actionsCell.append($('<button>')
-                .addClass('btn btn-sm btn-warning mr-2 configure-btn')
+                .addClass('btn btn-sm btn-warning mr-2 verify-btn')
                 .text('Vérifier')
                 .attr('data-domain', domain.name)
+                .attr('data-action', 'verify')
                 .click(function() {
                     configureDomain($(this));
                 }));
@@ -132,6 +133,7 @@
                 .addClass('btn btn-sm btn-primary mr-2 configure-btn')
                 .text('Configurer')
                 .attr('data-domain', domain.name)
+                .attr('data-action', 'configure')
                 .click(function() {
                     configureDomain($(this));
                 }));
@@ -152,20 +154,25 @@
 
     function configureDomain(button) {
         var domain = button.data('domain');
-        button.prop('disabled', true).text('Configuration en cours...');
+        var action = button.data('action');
+        var originalText = button.text();
+        var processingText = action === 'verify' ? 'Vérification en cours...' : 'Configuration en cours...';
+        
+        button.prop('disabled', true).text(processingText);
 
         $.post('{{ url_for("domains.configure_domain") }}', {
-            domain: domain
+            domain: domain,
+            action: action
         }, function(data) {
             if (data.status === 'success') {
                 loadDomains();
             } else {
-                alert('Erreur lors de la configuration du domaine: ' + data.message);
-                button.prop('disabled', false).text('Configurer');
+                alert('Erreur lors de la ' + (action === 'verify' ? 'vérification' : 'configuration') + ' du domaine: ' + data.message);
+                button.prop('disabled', false).text(originalText);
             }
         }).fail(function() {
             alert('Erreur de communication avec le serveur');
-            button.prop('disabled', false).text('Configurer');
+            button.prop('disabled', false).text(originalText);
         });
     }
 
@@ -196,13 +203,15 @@
     $(document).on('click', '.toggle-configured', function(e) {
         e.preventDefault();
         var $icon = $(this).find('i');
-        var $configuredDomains = $('.configured-domains');
+        var $configuredDomains = $(this).closest('tr').next('.configured-domains');
         
-        var bsCollapse = new bootstrap.Collapse($configuredDomains[0], {
-            toggle: true
-        });
-        
-        $icon.toggleClass('fa-chevron-down fa-chevron-up');
+        if ($configuredDomains.is(':visible')) {
+            $configuredDomains.hide();
+            $icon.removeClass('fa-chevron-up').addClass('fa-chevron-down');
+        } else {
+            $configuredDomains.show();
+            $icon.removeClass('fa-chevron-down').addClass('fa-chevron-up');
+        }
     });
 </script>
 {% endblock %}
