--- a/templates/domains.html
+++ b/templates/domains.html
@@ -214,11 +214,13 @@
         var $icon = $(this).find('i');
         var $configuredDomains = $(this).closest('tr').next('.configured-domains');
         
-        var bsCollapse = new bootstrap.Collapse($configuredDomains[0], {
-            toggle: true
-        });
-        
-        $icon.toggleClass('fa-chevron-down fa-chevron-up');
+        if ($configuredDomains.is(':visible')) {
+            $configuredDomains.collapse('hide'); // Utilisez collapse('hide') pour replier
+            $icon.removeClass('fa-chevron-up').addClass('fa-chevron-down');
+        } else {
+            $configuredDomains.collapse('show'); // Utilisez collapse('show') pour déplier
+            $icon.removeClass('fa-chevron-down').addClass('fa-chevron-up');
+        }
     });
 </script>
 {% endblock %}
