--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
                     <a class="nav-link" href="{{ url_for('editor.editor') }}">Rédiger un article</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('site_management.manage_categories') }}">Catégories/Langues</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('domains.domains') }}">Domaines</a>
                 </li>
                 <li class="nav-item">
